force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <description>Each customer (Account) applying for the loan application will have an Applicant record.</description>
    <label>Applicant</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Applicant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>