force-app/main/default/objects/Applicant__c/fields/ApplicantName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantName__c</fullName>
    <description>Applicant Name - To be copied from the Account lookup.</description>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>