force-app/main/default/objects/Applicant__c/fields/ApplicationOwnership__c.field-meta.xml
<CustomField>
    <fullName>ApplicationOwnership__c</fullName>
    <description>Percentage ownership of the application.</description>
    <label>Application Ownership</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>