force-app/main/default/objects/Applicant__c/fields/GrossExpense__c.field-meta.xml
<CustomField>
    <fullName>GrossExpense__c</fullName>
    <description>Gross Expense.</description>
    <label>Gross Expense</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>