force-app/main/default/objects/Applicant__c/fields/GrossIncome__c.field-meta.xml
<CustomField>
    <fullName>GrossIncome__c</fullName>
    <description>Gross Income. This can be calculated automatically based on business needs.</description>
    <label>Gross Income</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>