force-app/main/default/objects/Applicant__c/fields/IsPrimaryApplicant__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryApplicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for the primary applicant.</description>
    <label>Is Primary Applicant?</label>
    <type>Checkbox</type>
</CustomField>